--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(pyprj)
+project(pytextok)
 
 find_package(Python 3.8 COMPONENTS Interpreter Development REQUIRED)
 
